grammar.js
    source_file: $ => seq(repeat($._use_or_import), repeat($._declaration)),

    // ---------------------------------------------------------------------
    // Lexical layer
    // ---------------------------------------------------------------------

    // The lexer classifies a name by its first letter, after an optional
    // leading `_`. A `$` prefix escapes a keyword and is dropped from the
    // token text by the reference lexer; here it stays part of the token.
    name_lower: _ => /(\$[a-zA-Z]|_?[a-z])[a-zA-Z0-9_!$]*/,
    name_upper: _ => /_?[A-Z][a-zA-Z0-9_!$]*/,
    // Mathematical operators block; used for names like `⊆`.
    generic_operator: _ =>
      token(/_[+\-*<>=!&|^$]+|[+\-*<>=!&|^$][+\-*<>=!&|^$]+/),

    // `acceptLineOrDocComment` returns CommentDoc only for exactly three slashes:
    // `//` is a line comment, `///` a doc comment, `////` and longer line
    // comments again. The two patterns below are mutually exclusive, so neither
    // needs a `prec` — and must not have one, since explicit token precedence
    // outranks match length and would let the 3-character `///` prefix win over
    // a whole `////` line.
    annotation: _ => /@[a-zA-Z]+/,
    hole_anonymous: _ => '???',
    integer: _ =>
      token(
        choice(
          /0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*(i8|i16|i32|i64|ii)?/,
          /[0-9]+(_[0-9]+)*(i8|i16|i32|i64|ii)?/,
        ),
      ),
    boolean: _ => choice('true', 'false'),
    qualified_name: $ =>
      seq(
        repeat(seq($._qualified_segment, $._dot)),
        choice($._qualified_segment, $.name_lower),
        // Either dot: the scanner classifies `Foo.` at end of line as DOT_SPACED, because what
        // follows the dot is whitespace. The reference does not care -- nameAllowQualified closes a
        // TrailingDot for a dot with no name after it either way.
        optional(alias(choice($._dot, $._dot_spaced), $.trailing_dot)),
      ),
    _qualified_segment: $ => choice($.name_upper, $.name_math),

    // Java names are the exception: `nameAllowQualified` is called with an
    // empty tail set for them, so `java.util.Arrays` never stops early.
    java_qualified_name: $ =>
      seq($._java_segment, repeat(seq($._dot, $._java_segment))),
    _java_segment: $ => choice($.name_lower, $.name_upper),

    // ---------------------------------------------------------------------
    // Uses and imports — a strict prefix of the compilation unit
    // ---------------------------------------------------------------------

    _use_or_import: $ => seq(choice($.use_declaration, $.import_declaration), optional(';')),

    use_declaration: $ => seq('use', $.qualified_name, optional(seq($._dot, $.use_many))),
    import_declaration: $ =>
      seq('import', $.java_qualified_name, optional(seq($._dot, $.use_many))),
    use_many: $ => seq('{', commaSep($.aliased_name), '}'),
    aliased_name: $ => seq(definitionName($), optional(seq('=>', definitionName($)))),

    // ---------------------------------------------------------------------
    // Declarations
    // ---------------------------------------------------------------------

    modifier: _ => choice('pub', 'sealed', 'lawful', 'mut'),

    _declaration: $ =>
      choice(
        $.module_declaration,
        $.function_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.trait_declaration,
        $.instance_declaration,
        $.effect_declaration,
        $.type_alias_declaration,
      ),

    module_declaration: $ =>
      seq(
        ...prologue($),
        'mod',
        field('name', $.qualified_name),
        '{',
        repeat($._use_or_import),
        repeat($._declaration),
        '}',
      ),

    function_declaration: $ =>
      seq(
        ...prologue($),
        choice('def', 'redef'),
        field('name', functionName($)),
        optional($.type_parameter_list),
        field('parameters', $.parameter_list),
        ':',
        $._type_and_effect,
        optional($.trait_constraints),
        optional($.equality_constraints),
        '=',
        field('body', $._statement),
      ),

    // A trait signature is a `def` whose body may be omitted.
    signature_declaration: $ =>
      seq(
        ...prologue($),
        'def',
        field('name', functionName($)),
        optional($.type_parameter_list),
        field('parameters', $.parameter_list),
        ':',
        $._type_and_effect,
        optional($.trait_constraints),
        optional($.equality_constraints),
        optional(seq('=', field('body', $._statement))),
      ),

    enum_declaration: $ =>
      seq(
        ...prologue($),
        choice(
          seq('enum', field('name', $._type_name)),
          seq('restrictable', 'enum', field('name', $._type_name), $.restriction_parameter),
        ),
        optional($.type_parameter_list),
        optional($.case_body),
        optional($.derivations),
        optional($.enum_body),
      ),
    restriction_parameter: $ => seq('[', variableName($), ']'),
    enum_body: $ => seq('{', repeat($.enum_case), '}'),
    // Cases may be separated by `,`, by nothing, or introduced by a bare `,`
    // with `case` elided — `enumCases` is deliberately permissive.
    enum_case: $ =>
      seq(optional(','), optional('case'), field('name', $.name_upper), optional($.case_body)),
    case_body: $ => seq('(', commaSep($._type), ')'),
    derivations: $ => seq('with', commaSep1($.qualified_name)),

    struct_declaration: $ =>
      seq(
        ...prologue($),
        'struct',
        field('name', $._type_name),
        $.type_parameter_list,
        optional(seq('{', commaSep($.struct_field), '}')),
      ),
    struct_field: $ => seq(repeat($.modifier), field('name', $.name_lower), ':', $._type),

    trait_declaration: $ =>
      seq(
        ...prologue($),
        'trait',
        field('name', definitionName($)),
        $.type_parameter_list,
        optional($.trait_constraints),
        optional($.trait_body),
      ),
    trait_body: $ =>
      seq(
        '{',
        repeat(choice($.law_declaration, $.signature_declaration, $.associated_type_signature)),
        '}',
      ),
    associated_type_signature: $ =>
      seq(
        ...prologue($),
        'type',
        field('name', $._type_name),
        optional($.type_parameter_list),
        optional(seq(':', $.kind)),
        optional(seq('=', $._type)),
      ),

    instance_declaration: $ =>
      seq(
        ...prologue($),
        'instance',
        field('name', $.qualified_name),
        '[',
        $._type,
        ']',
        optional($.trait_constraints),
        optional($.equality_constraints),
        optional($.instance_body),
      ),
    instance_body: $ =>
      seq('{', repeat(choice($.function_declaration, $.associated_type_definition)), '}'),
    associated_type_definition: $ =>
      seq(
        ...prologue($),
        'type',
        field('name', $._type_name),
        optional($.type_argument_list),
        optional(seq('=', $._type)),
      ),

    effect_declaration: $ =>
      seq(...prologue($), 'eff', field('name', $.name_upper), optional($.effect_body)),
    effect_body: $ => seq('{', repeat($.operation_declaration), '}'),
    // Effect operations take no `\ eff` and no body.
    operation_declaration: $ =>
      seq(
        ...prologue($),
        'def',
        field('name', functionName($)),
        optional($.parameter_list),
        ':',
        $._type,
        optional($.trait_constraints),
      ),

    type_alias_declaration: $ =>
      seq(
        ...prologue($),
        'type',
        'alias',
        field('name', $._type_name),
        optional($.type_parameter_list),
        '=',
        $._type,
      ),

    // ---------------------------------------------------------------------
    // Parameters, constraints, kinds
    // ---------------------------------------------------------------------

    parameter_list: $ => seq('(', commaSep($.parameter), ')'),
    parameter: $ => seq(field('name', variableName($)), optional(seq(':', $._type))),

    type_parameter_list: $ => seq('[', commaSep($.type_parameter), ']'),
    type_parameter: $ => seq(field('name', variableName($)), optional(seq(':', $.kind))),

    type_argument_list: $ => seq('[', commaSep($._type), ']'),

    trait_constraints: $ => seq('with', commaSep1($.trait_constraint)),
    trait_constraint: $ => seq($.qualified_name, '[', $._type, ']'),

    equality_constraints: $ => seq('where', commaSep($.equality_constraint)),
    equality_constraint: $ => seq($._type, '~', $._type),

    // The reference parser only accepts a parenthesis before the name, which
    // makes `(K -> K) -> K` unparseable. This is the natural superset.
    kind: $ => choice($.name_upper, seq('(', $.kind, ')'), $.kind_arrow),
    _type_name: $ => choice($.name_upper, $.static_type),
    _type_and_effect: $ => prec.right(seq($._type, optional($.effect_annotation))),
    effect_annotation: $ => seq('\\', $._type),

    // A qualified name in type position is uppercase throughout; a bare
    // lowercase name there is a type variable, never a reference.
    type_reference: $ => seq($._type_name, repeat(seq($._dot, $._type_name))),

    _type: $ =>
      choice(
        $.type_reference,
        // A leaf, like the reference's Type.Variable, which holds the name as a token rather than
        // as a child node. Aliasing the three name rules here rather than wrapping them in a
        // `type_variable` rule is what keeps it a leaf: a wrapper would give the node one named
        // child where the reference has none, and every type variable would diverge on arity.
        alias(choice($.name_lower, $.name_math, $.wildcard), $.type_variable),
        $.type_constant,
        $.tuple_type,
        $.record_row_type,
        $.record_type,
        $.effect_set_type,
        $.schema_type,
        $.schema_row_type,
        $.extensible_type,
        $.case_set_type,
        $.type_application,
        $.unary_type,
        $.binary_type,
      ),

    type_application: $ => prec.left(TPREC.apply, seq($._type, $.type_argument_list)),

    // Type-level operators are nodes for the same reason expression-level ones are: the reference
    // wraps them in TreeKind.Operator, so Type.Binary and Type.Unary each carry one more child than
    // an anonymous token would give.
    binary_type: $ =>
      choice(
        prec.right(TPREC.arrow, seq($._type, $._arrow_spaced, $._type_and_effect)),
        ...[
          [TPREC.rv_add_sub, choice('rvadd', 'rvsub')],
          [TPREC.rv_and, 'rvand'],
          [TPREC.additive, choice('+', '-')],
          [TPREC.intersection, '&'],
          [TPREC.xor, 'xor'],
          [TPREC.or, 'or'],
          [TPREC.and, 'and'],
        ].map(([p, op]) =>
          prec.left(
            /** @type {number} */ (p),
            seq($._type, field('operator', alias(/** @type {RuleOrLiteral} */ (op), $.operator)), $._type),
          ),
        ),
      ),

    // `()` is an empty record row, not a tuple.
    tuple_type: $ => seq('(', commaSep1($._type), ')'),
    _statement: $ => choice($._expression, $.sequence_expression),
    _expression: $ =>
      choice(
        $._literal,
        $.debug_interpolation,
        $.qualified_name,
        $.wildcard,
        $.intrinsic,
        $.hole_anonymous,
        $.hole_named,
        $.hole_variable,
        $.static_expression,
        $.unit_expression,
        $.paren_expression,
        $.tuple_expression,
        $.ascribe_expression,
        $.operator_lambda,
        $.lambda,
        $.block,
        $.record_expression,
        $.let_expression,
        $.local_def_expression,
        $.region_expression,
        $.if_expression,
        $.match_expression,
        $.match_lambda,
        $.ext_match_expression,
        $.ext_match_lambda,
        $.restrictable_choose,
        $.ext_tag_expression,
        $.open_variant_expression,
        $.foreach_expression,
        $.for_monadic_expression,
        $.for_applicative_expression,
        $.array_literal,
        $.vector_literal,
        $.list_literal,
        $.set_literal,
        $.map_literal,
        $.checked_cast,
        $.unchecked_cast,
        $.unsafe_expression,
        $.run_expression,
        $.handler_expression,
        $.try_expression,
        $.throw_expression,
        $.new_expression,
        $.invoke_constructor,
        $.super_expression,
        $.spawn_expression,
        $.par_yield_expression,
        $.select_expression,
        $.use_expression,
        $.fixpoint_constraint_set,
        $.fixpoint_solve,
        $.fixpoint_psolve,
        $.unterminated_literal,
        $.unterminated_string,
        $.fixpoint_inject,
        $.fixpoint_query,
        $.fixpoint_query_with_provenance,
        $.fixpoint_lambda,
        $.apply_expression,
        $.invoke_method,
        $.get_field,
        $.record_select,
        $.struct_get,
        $.struct_put,
        $.index_expression,
        $.index_assign_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    unit_expression: _ => seq('(', ')'),
    block: $ => seq('{', $._statement, '}'),

    use_expression: $ =>
      prec.right(seq(choice($.use_declaration, $.import_declaration), ';', $._statement)),


    argument_list: $ => seq('(', commaSep($.argument), ')'),
    argument: $ => seq($._expression, optional(seq('=', $._expression))),

    apply_expression: $ => prec.left(PREC.postfix, seq($._expression, $.argument_list)),
    // Outranks `apply_expression(get_field(...))`, which matches the same tokens.
    binary_expression: $ =>
      choice(
        prec.right(
          PREC.cons,
          seq($._expression, field('operator', alias(choice('::', ':::'), $.operator)), $._expression),
        ),
        prec.left(
          PREC.infix_function,
          seq($._expression, '`', $.qualified_name, '`', $._expression),
        ),
        ...[
          [PREC.instanceof, 'instanceof'],
          [PREC.or, 'or'],
          [PREC.and, 'and'],
          [PREC.equality, choice('==', '<=>', '!=')],
          [PREC.comparison, choice('<', '>', '<=', '>=')],
          [PREC.additive, choice('+', '-')],
          [PREC.multiplicative, choice('*', '/')],
          [PREC.angled_plus, '<+>'],
          [PREC.user_operator, choice($.generic_operator, $.name_math)],
        ].map(([p, op]) =>
          prec.left(
            /** @type {number} */ (p),
            seq(
              $._expression,
              field('operator', alias(/** @type {RuleOrLiteral} */ (op), $.operator)),
              $._expression,
            ),
          ),
        ),
      ),
  },
});
