test/corpus/declarations.txt
================================================================================
Module with a function
================================================================================

mod Main {
    pub def main(): Unit \ IO = println("Hello")
}

--------------------------------------------------------------------------------

(source_file
  (module_declaration
    (qualified_name
      (name_upper))
    (function_declaration
      (modifier)
      (name_lower)
      (parameter_list)
      (type_reference
        (name_upper))
      (effect_annotation
        (type_reference
          (name_upper)))
      (apply_expression
        (qualified_name
          (name_lower))
        (argument_list
          (argument
            (string)))))))

================================================================================
Uses and imports
================================================================================

use Foo.Bar
use Foo.Bar.baz;
use Foo.{a, b => c}
import java.util.Arrays
import java.util.{Map, List => JList}

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (qualified_name
      (name_upper)
      (name_upper)))
  (use_declaration
    (qualified_name
      (name_upper)
      (name_upper)
      (name_lower)))
  (use_declaration
    (qualified_name
      (name_upper))
    (use_many
      (aliased_name
        (name_lower))
      (aliased_name
        (name_lower)
        (name_lower))))
  (import_declaration
    (java_qualified_name
      (name_lower)
      (name_lower)
      (name_upper)))
  (import_declaration
    (java_qualified_name
      (name_lower)
      (name_lower))
    (import_many
      (aliased_name
        (name_upper))
      (aliased_name
        (name_upper)
        (name_upper)))))

================================================================================
Function with type parameters and constraints
================================================================================

pub def map(f: a -> b \ ef, t: Tree[a]): Tree[b] \ ef with Eq[a], Order[a] = ???

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifier)
    (name_lower)
    (parameter_list
      (parameter
        (name_lower)
        (binary_type
          (type_variable)
          (type_variable)
          (effect_annotation
            (type_variable))))
      (parameter
        (name_lower)
        (type_application
          (type_reference
            (name_upper))
          (type_argument_list
            (type_variable)))))
    (type_application
      (type_reference
        (name_upper))
      (type_argument_list
        (type_variable)))
    (effect_annotation
      (type_variable))
    (trait_constraints
      (trait_constraint
        (qualified_name
          (name_upper))
        (type_variable))
      (trait_constraint
        (qualified_name
          (name_upper))
        (type_variable)))
    (hole_anonymous)))

================================================================================
Function with equality constraints
================================================================================

def f(): b where Elm[t] ~ b, Foo[x] ~ Bar = ???

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (name_lower)
    (parameter_list)
    (type_variable)
    (equality_constraints
      (equality_constraint
        (type_application
          (type_reference
            (name_upper))
          (type_argument_list
            (type_variable)))
        (type_variable))
      (equality_constraint
        (type_application
          (type_reference
            (name_upper))
          (type_argument_list
            (type_variable)))
        (type_reference
          (name_upper))))
    (hole_anonymous)))

================================================================================
Annotations precede modifiers
================================================================================

@Test
pub def testAdd(): Bool = 1 == 1

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (annotation)
    (modifier)
    (name_lower)
    (parameter_list)
    (type_reference
      (name_upper))
    (binary_expression
      (integer)
      (operator)
      (integer))))

================================================================================
Enum with cases
================================================================================

enum Shape {
    case Circle(Int32)
    case Square(Int32)
    case Rectangle(Int32, Int32)
}

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (name_upper)
    (enum_body
      (enum_case
        (name_upper)
        (case_body
          (type_reference
            (name_upper))))
      (enum_case
        (name_upper)
        (case_body
          (type_reference
            (name_upper))))
      (enum_case
        (name_upper)
        (case_body
          (type_reference
            (name_upper))
          (type_reference
            (name_upper)))))))

================================================================================
Enum case separators are optional
================================================================================

enum E { case A, case B }
enum F { case A case B }
enum G { case A, B }

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (name_upper)
    (enum_body
      (enum_case
        (name_upper))
      (enum_case
        (name_upper))))
  (enum_declaration
    (name_upper)
    (enum_body
      (enum_case
        (name_upper))
      (enum_case
        (name_upper))))
  (enum_declaration
    (name_upper)
    (enum_body
      (enum_case
        (name_upper))
      (enum_case
        (name_upper)))))

================================================================================
Enum shorthand and derivations
================================================================================

enum Meters(Int64)
enum Color with Eq, Order, ToString

--------------------------------------------------------------------------------

(source_file
  (enum_declaration
    (name_upper)
    (case_body
      (type_reference
        (name_upper))))
  (enum_declaration
    (name_upper)
    (derivations
      (qualified_name
        (name_upper))
      (qualified_name
        (name_upper))
      (qualified_name
        (name_upper)))))

================================================================================
Restrictable enum
================================================================================

restrictable enum Expr[s][a] {
    case Cst(a)
    case Var(Int32)
}

--------------------------------------------------------------------------------

(source_file
  (restrictable_enum_declaration
    (name_upper)
    (restriction_parameter
      (name_lower))
    (type_parameter_list
      (type_parameter
        (name_lower)))
    (enum_body
      (enum_case
        (name_upper)
        (case_body
          (type_variable)))
      (enum_case
        (name_upper)
        (case_body
          (type_reference
            (name_upper)))))))

================================================================================
Struct
================================================================================

struct Node[t, r] {
    mut value: t,
    next: Node[t, r]
}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower))
      (type_parameter
        (name_lower)))
    (struct_field
      (modifier)
      (name_lower)
      (type_variable))
    (struct_field
      (name_lower)
      (type_application
        (type_reference
          (name_upper))
        (type_argument_list
          (type_variable)
          (type_variable))))))

================================================================================
Trait with signature and associated type
================================================================================

pub sealed trait Order[a] with Eq[a] {
    type Elm: Type
    pub def compare(x: a, y: a): Comparison
}

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    (modifier)
    (modifier)
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower)))
    (trait_constraints
      (trait_constraint
        (qualified_name
          (name_upper))
        (type_variable)))
    (trait_body
      (associated_type_signature
        (name_upper)
        (kind
          (name_upper)))
      (signature_declaration
        (modifier)
        (name_lower)
        (parameter_list
          (parameter
            (name_lower)
            (type_variable))
          (parameter
            (name_lower)
            (type_variable)))
        (type_reference
          (name_upper))))))

================================================================================
Instance with redef and associated type definition
================================================================================

instance Order[Option[a]] with Order[a] {
    type Elm[Option[a]] = a
    pub def compare(x: Option[a], y: Option[a]): Comparison = ???
    redef minimum(): Option[a] = None
}

--------------------------------------------------------------------------------

(source_file
  (instance_declaration
    (qualified_name
      (name_upper))
    (type_application
      (type_reference
        (name_upper))
      (type_argument_list
        (type_variable)))
    (trait_constraints
      (trait_constraint
        (qualified_name
          (name_upper))
        (type_variable)))
    (instance_body
      (associated_type_definition
        (name_upper)
        (type_argument_list
          (type_application
            (type_reference
              (name_upper))
            (type_argument_list
              (type_variable))))
        (type_variable))
      (function_declaration
        (modifier)
        (name_lower)
        (parameter_list
          (parameter
            (name_lower)
            (type_application
              (type_reference
                (name_upper))
              (type_argument_list
                (type_variable))))
          (parameter
            (name_lower)
            (type_application
              (type_reference
                (name_upper))
              (type_argument_list
                (type_variable)))))
        (type_reference
          (name_upper))
        (hole_anonymous))
      (function_declaration
        (name_lower)
        (parameter_list)
        (type_application
          (type_reference
            (name_upper))
          (type_argument_list
            (type_variable)))
        (qualified_name
          (name_upper))))))

================================================================================
Effect declaration
================================================================================

eff Console {
    def print(s: String): Unit
    def read(): String
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (name_upper)
    (effect_body
      (operation_declaration
        (name_lower)
        (parameter_list
          (parameter
            (name_lower)
            (type_reference
              (name_upper))))
        (type_reference
          (name_upper)))
      (operation_declaration
        (name_lower)
        (parameter_list)
        (type_reference
          (name_upper))))))

================================================================================
Type alias
================================================================================

type alias Pair[a] = (a, a)

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower)))
    (tuple_type
      (type_variable)
      (type_variable))))

================================================================================
Definitions may be named by a user-defined operator
================================================================================

pub def >>(f: a, g: b): c = ???
def +++(x: Int32, y: Int32): Int32 = x + y + 1
def _>==>(): Int32 = 1

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (modifier)
    (generic_operator)
    (parameter_list
      (parameter
        (name_lower)
        (type_variable))
      (parameter
        (name_lower)
        (type_variable)))
    (type_variable)
    (hole_anonymous))
  (function_declaration
    (generic_operator)
    (parameter_list
      (parameter
        (name_lower)
        (type_reference
          (name_upper)))
      (parameter
        (name_lower)
        (type_reference
          (name_upper))))
    (type_reference
      (name_upper))
    (binary_expression
      (binary_expression
        (qualified_name
          (name_lower))
        (operator)
        (qualified_name
          (name_lower)))
      (operator)
      (integer)))
  (function_declaration
    (generic_operator)
    (parameter_list)
    (type_reference
      (name_upper))
    (integer)))

================================================================================
Use with operator names
================================================================================

use Bool.{==>, <==>}

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (qualified_name
      (name_upper))
    (use_many
      (aliased_name
        (generic_operator))
      (aliased_name
        (generic_operator)))))

================================================================================
A fixed operator in a trait and an instance is marked
================================================================================

trait T[a] {
    pub def <=>(x: a, y: a): Bool
}

instance T[Int32] {
    pub def <=>(x: Int32, y: Int32): Bool = true
}

--------------------------------------------------------------------------------

(source_file
  (trait_declaration
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower)))
    (trait_body
      (signature_declaration
        (modifier)
        (reserved_operator)
        (parameter_list
          (parameter
            (name_lower)
            (type_variable))
          (parameter
            (name_lower)
            (type_variable)))
        (type_reference
          (name_upper)))))
  (instance_declaration
    (qualified_name
      (name_upper))
    (type_reference
      (name_upper))
    (instance_body
      (function_declaration
        (modifier)
        (reserved_operator)
        (parameter_list
          (parameter
            (name_lower)
            (type_reference
              (name_upper)))
          (parameter
            (name_lower)
            (type_reference
              (name_upper))))
        (type_reference
          (name_upper))
        (boolean)))))

================================================================================
Use with a package path
================================================================================

use flixball::Game.Board
use flixball::{Game, Board}
use Pkg::Game.{a, b => c}
use flixball :: Game

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (package
      (name_lower))
    (qualified_name
      (name_upper)
      (name_upper)))
  (use_declaration
    (package
      (name_lower))
    (use_many
      (aliased_name
        (name_upper))
      (aliased_name
        (name_upper))))
  (use_declaration
    (package
      (name_upper))
    (qualified_name
      (name_upper))
    (use_many
      (aliased_name
        (name_lower))
      (aliased_name
        (name_lower)
        (name_lower))))
  (use_declaration
    (package
      (name_lower)
      (malformed_package_separator))
    (qualified_name
      (name_upper))))

================================================================================
Use with a package path inside an expression
================================================================================

def f(): Unit = {
    use flixball::Game.Board;
    ()
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (name_lower)
    (parameter_list)
    (type_reference
      (name_upper))
    (block
      (use_expression
        (use_declaration
          (package
            (name_lower))
          (qualified_name
            (name_upper)
            (name_upper)))
        (unit_expression)))))

================================================================================
Effect with type parameters
================================================================================

eff State[s: Type] {
    def get(): s
    def put(value: s): Unit
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower)
        (kind
          (name_upper))))
    (effect_body
      (operation_declaration
        (name_lower)
        (parameter_list)
        (type_variable))
      (operation_declaration
        (name_lower)
        (parameter_list
          (parameter
            (name_lower)
            (type_variable)))
        (type_reference
          (name_upper))))))

================================================================================
Generic effect operations keep their shape behind an error marker
================================================================================

eff Console {
    def print[a: Type](value: a): Unit
}

--------------------------------------------------------------------------------

(source_file
  (effect_declaration
    (name_upper)
    (effect_body
      (operation_declaration
        (name_lower)
        (illegal_type_parameters
          (type_parameter_list
            (type_parameter
              (name_lower)
              (kind
                (name_upper)))))
        (parameter_list
          (parameter
            (name_lower)
            (type_variable)))
        (type_reference
          (name_upper))))))

================================================================================
law and lawful are ordinary names since Flix v0.75.2
================================================================================

def law(lawful: Int32): Int32 = lawful

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (name_lower)
    (parameter_list
      (parameter
        (name_lower)
        (type_reference
          (name_upper))))
    (type_reference
      (name_upper))
    (qualified_name
      (name_lower))))

================================================================================
A law declaration is no longer parsed
:error
================================================================================

trait Order[a] {
    law reflexive: forall(x: a) x == x
}

--------------------------------------------------------------------------------

(source_file)

================================================================================
A package separator with whitespace on either side is malformed
================================================================================

use flixball ::Game
use flixball:: Game
use flixball :: {Game, Board}
def f(): List[Int32] = x ::xs

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (package
      (name_lower)
      (malformed_package_separator))
    (qualified_name
      (name_upper)))
  (use_declaration
    (package
      (name_lower)
      (malformed_package_separator))
    (qualified_name
      (name_upper)))
  (use_declaration
    (package
      (name_lower)
      (malformed_package_separator))
    (use_many
      (aliased_name
        (name_upper))
      (aliased_name
        (name_upper))))
  (function_declaration
    (name_lower)
    (parameter_list)
    (type_application
      (type_reference
        (name_upper))
      (type_argument_list
        (type_reference
          (name_upper))))
    (binary_expression
      (qualified_name
        (name_lower))
      (operator)
      (qualified_name
        (name_lower)))))

================================================================================
A fixed operator cannot name a definition
================================================================================

use Monad.{>=>, <=<}

trait T[a] {
    pub def <=>(x: a, y: a): Bool
}

def ==(x: Int32, y: Int32): Bool = true

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (qualified_name
      (name_upper))
    (use_many
      (aliased_name
        (generic_operator))
      (aliased_name
        (generic_operator))))
  (trait_declaration
    (name_upper)
    (type_parameter_list
      (type_parameter
        (name_lower)))
    (trait_body
      (signature_declaration
        (modifier)
        (reserved_operator)
        (parameter_list
          (parameter
            (name_lower)
            (type_variable))
          (parameter
            (name_lower)
            (type_variable)))
        (type_reference
          (name_upper)))))
  (function_declaration
    (reserved_operator)
    (parameter_list
      (parameter
        (name_lower)
        (type_reference
          (name_upper)))
      (parameter
        (name_lower)
        (type_reference
          (name_upper))))
    (type_reference
      (name_upper))
    (boolean)))
